<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Office Koi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="password">password</string>


    <string name="meeting" tools:ignore="DuplicateDefinition">Meeting</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="regular">Regular</string>
    <string name="premium">Premium</string>
    <string name="search_spcace">Search Spcace</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>

    <string name="spaceaddress">SpaceAddress</string>
    <string name="office_koi">Office Koi</string>
    <string name="communicate">Communicate</string>
</resources>
