<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4DEDD"
    android:backgroundTint="#00523C3C"
    android:backgroundTintMode="screen"
    android:clickable="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.officekoi.CustomerLoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="416dp"
            android:layout_height="69dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/email"
        android:layout_width="389dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="83dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/login"
        android:layout_width="372dp"
        android:layout_height="45dp"
        android:background="#00BCD4"
        android:text="@string/login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="384dp"
        android:layout_height="44dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="139dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/registration"
        android:layout_width="376dp"
        android:layout_height="39dp"
        android:background="#2196F3"
        android:text="@string/registration"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="269dp" />
</androidx.constraintlayout.widget.ConstraintLayout>